# PhilanthropyMatrix

./: README.md
backend/: Cargo.toml  schema.sql
backend/src/: claims.rs  main.rs
backend/src/models/: group.rs  group_proposal.rs  mod.rs  user.rs  user_group_association.rs
backend/src/routes/: auth.rs  donations.rs  group_members.rs  groups.rs  mod.rs  profile.rs
contract/: README.md
frontend/: .env-example  README.md  package-lock.json  package.json
frontend/src/lib/components/: AddMinter.svelte  Donations.svelte  InstantiateContract.svelte  LinkAccounts.svelte  ManageMembers.svelte  Minidenticons.svelte  MintNFT.svelte
frontend/src/lib/services/: api.js
frontend/src/routes/: +layout.svelte  +page.svelte  Header.svelte  styles.css
frontend/src/routes/donations/: +page.svelte
frontend/src/routes/groups/: +page.svelte
frontend/src/routes/home/: +page.svelte
frontend/src/routes/link/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/profile/: +page.svelte
frontend/src/routes/proposals/: +page.svelte
frontend/src/routes/protected/: +page.svelte
frontend/src/routes/register/: +page.svelte
snip721/src/: contract.rs  msg.rs
